<resources>
    <string name="app_name">Scriptor</string>
    <string name="example">أُعلّلُ قَلبي في الغرامِ وأكتمُ ولكنَّ حالي عن هَوايَ يُترجمُ وكنتُ خَليّاً لستُ أَعرفُ ما الهوى فأصبحتُ حَيّاً والفؤادُ متيّمُ. أجمل ما قيل في الحب إنّي رحلتُ إلى عينيكِ أطلبها إمّا المماتُ وإمّا العودُ منتصراً كلُّ القصائدِ من عينيكِ أقبسها ما كنتُ دونهما في الشعرِ مقتدراً صارت عيونُكِ ألحاناً لأغنيتي والقلبُ صار لألحانِ الهوى وتراً. بغربةِ الساعة أحببتك وبدمعةِ الغيمةِ أحببتك بهزّةِ رموشكِ أحببتك بكلّ حواسِّ الحبِّ أحببتك. دمعة تسيل وشمعة تنطفي والعمر بدونك يختفي ومن دونكِ حتماً قلبي ينتهي. حبيبي أقدّم عمري لكَ هديّة وأعتذر عن رخصِ الهدي قدرك سما فوق السما ونجومها لك هديّة. يا حظّ المكان بيك يا حظّ من هم حواليك يا حظّ ناس تشوفك وأنا مشتاق إليك. أي سرّ يعتري شوقي إليك إنّ شوقي حائر في مقلتيك كلّنا أسرى صبابات الهوى فادنُ منّي .. إنّني ملك يديك. إن كان ذنبي أنّ حبّك شاغلي عمّن سواك فلست عنه بتائب. حب وأشعار أُحبّكَ مهما طالَ انتظاري لأنّكَ لستَ قدري ولكن اختياري. وما كنت ممّن يدخل العشق قلبه و لكن من يبصر جفونك يعشق.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quotes">Quotes</string>
    <string name="novels">Novels</string>
    <string name="short_stories">Short Stories</string>
    <string name="poems">Poems</string>
    <string name="writing_basics">Writing Basics</string>
    <string name="create_post">Create Post</string>
    <string name="create_quote">Create Quote</string>
    <string name="add_novel">Add Novel</string>
    <string name="write_quote">Write Quote</string>
    <string name="write_short_story">Write Short Story</string>
    <string name="write_poem">Write Poem</string>
    <string name="todo">TODO</string>
    <string name="write_your_quote">Write your Quote…</string>
    <string name="write_your_feedback">Write your feedback…</string>
    <string name="post">POST</string>
    <string name="send">SEND</string>
    <string name="send_us_your_feedback">Send us Your Feedback…</string>
    <string name="setting">Setting</string>
    <string name="writing3">نتجه اتجاه تطبيقي شوية في الكتابة وخلوني أنساق للغة الأم شوية واتكلم بيها:</string>
    <string name="writing2">حيلك.. حيلك الإستعجال مش حلو خصوصا في الكتابة لازم تصبر على نفسك وتتعلم أكتر وأكتر وتفضل مقتنع إنك مهما اتعلمت فأنت لسا متعرفش كل حاجة.. الكتابة أمر متعب أي كان النوع اللي هتكتب فيه بس المكافأة اللي هتشوفها من الكتابة هو الرضا عن كل سطر كتبته ومهما كانت صعوبة الموضوع في بعض الأحيان هتحس بمتعة رهيبة وأنت بتقرأ إبداعك.
</string>
    <string name="writing01">“الكتابة هي شكل من أشكال الحرية الشخصية. فهي تحرّرنا من الهُوية الجماعية التي نراها في كل مكانٍ من حولنا. في النهاية، لن يكتب الكتّاب ليكونوا أبطالاً خارجين عن القانون وعن تقاليد المجتمع، بل في الأساس يكتبون لحماية أنفسهم، وليبقوا أفرادًا” – الروائيّ دون ديليلو</string>
    <string name="writing02">- هي حالة خاصة من الترجمة، فالترجمة في الأساس هي عملية استبدال كلمات بكلمات أخرى مغايرة مع محاولة الاحتفاظ بالمعنى، والكتابة كذلك هي عملية استبدال أو ترجمة أفكار مجردة إلى كلمات مكتوبة مع محاولة الاحتفاظ بالمعنى. - فهد رشاد المطيري
</string>
    <string name="writing03">-الكتابة هي التي صنعت الحضارات، فعندما بدأ الإنسان يكتب، سواء برسومات أو رموز أو حروف، بدأت الحضارات تنهض، وقبل ذلك كانت بدائية. ولن تفقد الكلمة دورها أبداً، الكتابة بإمكانها أن تغير مفاهيم العقول وتبني الشخصيات أو حتى تهدمها، وهذا يعني ان أثرها إما إيجابي أو سلبي.
</string>
    <string name="writing04">انظر اليوم، رغم وصول العالم إلى درجة متقدمة جداً في عالم الاتصالات، إلا أنك ترى صفحات على مواقع التواصل الاجتماعي باسم جبران خليل جبران أو شكسبير، ويحصدون أكبر قدر من الإعجابات. ولولا تأثير الكتابة لاندثر أصحابها. - عدنان فرزات
</string>
    <string name="writing05">معنى التعريفات والآراء اللي فاتت تتلخص في كلمتين: "الكتابة رسالة"، إنك توصل للمجتمع رسايلك وأفكارك معتمد على شوية كلمات مترتبة بشكل منظم ومريح للقارئ لإنشاء محتوى لطيف
</string>
    <string name="writing4">يعتقد الكثير من الناس أنّه لمجرد قراءتهم الكثير من القصص – وحتى إذا لم يقرؤوا – فيجدر بهم أن يكونوا قادرين على كتابة قصة. لكن كما يقول نايجل واتس: “هنالك اعتقاد شائع بأنّه لسبب كون أغلبنا مثقفين وطليقي اللسان، فلا حاجة للتدريب إذا كنّا نريد أن نصبح ذوي كلامٍ عذبٍ ناجحين. هذا ما اعتقدته حتى حاولتُ كتابة روايتي الأولى، تعلمت في وقتٍ قريب أن الرواية مثل قطعة الأثاث، لديها مجموعة خاصة من المتطلبات، وقوانين بناءٍ يجب أن تتعلمها. مجرّد قراءتي الكثير من الروايات لا يعني قدرتي لكتابة واحدة، وكذلك الحال مع الكراسي، فلا يمكنني أن أصنع كرسيًّا لأنني جلستُ على الكثير منها” – نايجل واتس، صاحب كتاب (Teach Yourself Writing a Novel).</string>
    <string name="writing5">- تمارينات كتابية؟!! إيه التهريج ده؟</string>
    <string name="writing6">= أيوا بالظبط.. هو نفس السؤال اللي جه في دماغك كان جالي اللي هو إزاي اعمل تمرينات كتابية متتخضش بس أنا معاك واحدة واحدة هنتفق سوا على الخطوات:</string>
    <string name="writing7">- يكتشف العديد من الكتّاب المبدعين الجدد أن غسل الأواني أو التعشيب في الحديقة يبدو فجأةً أمرًا جذابًا، مقارنةً بالجهد الذي يبذلونه للجلوس ووضع الكلمات في الصفحة. أجبِر نفسك على التغلب على هذه الشكوك المبكرة، وستصبح أسهل حقًا. حاول أن تجعل عادة الكتابة اليومية تتخلل روتينك، حتى وإن كان ذلك لمدة عشر دقائق.</string>
    <string name="writing8">- إذا علقت بمأزق الأفكار، احمل دفتر ملاحظاتٍ في كل مكان تذهب إليه وسجل ملاحظاتك: ستحصل على بعض خطوط الحوار الرائعة عندما تُبقي آذانك مفتوحةً في الحافلة أو في المقاهي، وقد تتعرف إلى عبارةٍ استثنائية عندما ترى أو تشم شيئًا.</string>
    <string name="writing9">- اعمل في الوقت الذي يكون فيه إبداعك بأقصى حدوده : بالنسبة للعديد من الكتّاب، فهذا هو أول أمر يفعلونه في الصباح، قبل كل طلبات اليوم المشتتة للانتباه. يكتب آخرون بشكلٍ جيد في وقتٍ متأخر من الليل، بعد خلود بقية أفراد الأسرة لفراشهم. لا تخف من التجربة!</string>
    <string name="writing10">- لا تُرهق نفسك في إنجاز العمل بالشكل المناسب: على كل الكتّاب مراجعة وتحرير عملهم، فمن النادر أن تخرج قصة أو مشهد أو حتى جملة بصورةٍ مثالية من المرة الأولى. بمجرد الانتهاء من المسودّة الأولية، اترك القطعة لبضعة أيام، ثم عُد إليها طازجةً، مع قلمٍ أحمر في يدك. إذا كنت تعرف أن هنالك مشاكل في قصتك لكنك لا تستطيع تحديدها بدقةٍ عالية، فاطلب من كاتبٍ زميل أن يقرأها ويرسل لك ملاحظاته.</string>
    <string name="writing11">- استمتع!  أحيانًا، يمكننا – نحن الكتّاب – أن نُنهي تلك المشاعر التي تراودنا بشأن كون كتابتنا عملاً روتينيًا، أو أن هناك أمرًا ما “يجب” إنجازه، أو شيئًا يجب المماطلة فيه لأطول فترة ممكنة. إذا بدا الخط الزمني لقصتك متكلفًا بوحشيّة، أو شخصياتك تدفعك للبكاء واقتنعتَ أنّ بإمكان طفلٍ بعمر خمس سنوات مع قلم تلوين كتابة نثرٍ أفضل.. فخذ استراحةً إذن. ابدأ مشروعًا جديدًا تمامًا، شيئًا مخصصًا للاستمتاع فقط. اكتب قصيدةً أو قصة قصيرة من ٦٠ كلمة. مجرد إكمال قطعةٍ صغيرةٍ منتهية يمكنه أن يساعدك إذا كنت قد انغمست في قصةٍ أطول.</string>
    <string name="writing12">كل اللي فات ده مصحوب برضه معاه قراية كتير كتير كتير كتير ولحد ما تزهق من تكرار كلمة كتير في نفس الجملة تفضل تقرأ لإنها التمرين الأول والأهم والأقوى والملهم كمان.</string>
    <string name="writing13">- أنا كدا قدرت أعمل كل ده وجاهز على كتابة أي نوع، صح؟</string>
    <string name="writing14">بنسبة كبيرة أنت تمام ناقصك تفرق بس ما بين أنواع الكتابة الرائدة حاليا زي القصة والرواية والشعر والمقالات والأخبار والمحتوى وعشان الدنيا تبقى لطيفة معاك أعرف إن الكتابة 3 أنواع أساسية:</string>
    <string name="writing15">تعني بالكتابة التي تؤدي وظيفةٍ خاصة في حياة الفرد والجماعة على حدٍ سواء؛ وذلك بهدف تحقيق الفهم والإفهام. وبالتالي هي ذلك النوع من الكتابة التي يمارسها الطلبة كمتطلب لهم في حياتهم اليومية العامة، كما يمارسونها عند الحاجة إلى الممارسة الرسميّة.
ومن المجالات لاستعمال الكتابة الوظيفية كنوع من أنواع الكتابة: كتابة الرسائل والبرقيات، السير الأكاديميّة، الاستدعاءات بأنواعها، الإعلانات وكتابة السجلات والتقارير والتلاخيص.</string>
    <string name="writing16">هي فرع من الكتابة الوظيفيّة، حيث يستخدم فيها الكاتب أساليب ووسائل إقناعيّة؛ لإقناع القارئ بوجهة نظره، مثل: المحاججة، إثارة العطف، نقل المعلومات بطريقة تؤثر لصالح موقف مُعين، استخدام الأسلوب الأخلاقي، حيث يقوم الكاتب على اللجوء إلى المنطق والعاطفة أو الأخلاق. وربما إلى الدين؛ بهدف إقناع القائ بآرائه.</string>
    <string name="writing17">هي تلك العملية التي تسمح بإنتاح نص مكتوب، من خلال تطوير الفكرة الأساسية ومراجعتها وتطويرها. كما تُعدُّ نوع من أنواع الكتابة الذي يهدف إلى الترجمة عن الأفكار، المشاعر الداخلية، الأحاسيس والانفعالات. وبعد ذلك نقلها إلى الآخرين بأسلوب أدبي عالي؛ وذلك بغية التأثير في نفوس السامعين أو القارئين، تأثيراً يكاد يقترب من انفعال أصحاب هذه الأعمال.
حيث يعبّر الكاتب في هذا النوع من الكتابة عن أفكاره الذاتيّة الأصلية، كما يبني أفكاره وينسقها وينظمها في موضوع مُعين، بطريقة تسمح للقاريء أنْ يمرُّ بالخبرة نفسها التي مرَّ بها الكاتب.
ويُطلق عليها أيضاً التعبير الإنشائي؛ لذا فهو تعبير إبداعي ذاتي، ينفث فيه الشاعر أو الناثر أفكاره وأحاسيسه، حيث يُفصح عمّا يوجد بداخله من عواطف وانفعالات. وذلك بعبارات منتقاه جيداً ومستوفية الصحة والسلامة النحوية واللغوية. ومن الأمثِلة على هذا النوع: كتابة القصة القصيرة، الرواية، المقالة الأدبية، القصيدة الشعريّة، كتابة تراجم حياة العظماء، السير والمذكرات الشخصية.
</string>
    <string name="writing18">والأخيرة دي هي الزتونة اللي محتاجينها لينا ككتاب بس كان لازم نلم بباقي الكتابات عشان نفهم الموضوع بشكل صحيح ودلوقتي وصلنا لفقرتنا الأخيرة واللي كلكم منتظرينها في كيفية</string>
    <string name="writing19">1- القصيدة
</string>
    <string name="writing20">لازم تعرف إن كتابة القصيدة مش مجرد تلحين وقافية وخلاص لإن دراسة موضوع بحجم القصيدة هو أمر خارج إطاري شوية لكن أنا هحاول أفيدك بالأساسيات البسيطة اللي هتحتاجها:</string>
    <string name="writing21">أولاً : لابد أن تحدد الفكرة المراد توصيلها للقارئ من خلال التعبيّر عنها وتجسيدها</string>
    <string name="writing22">ثانياً : أن تكون متهيئ نفسياً وتكون لديك الرغبة في الكتابة</string>
    <string name="writing23">ثالثاً : أن تمزج بين الخيال و الفكرة لأنك بذلك سوف تجعل هناك ارتباط بينهما بالأبعاد اللغوية</string>
    <string name="writing24">رابعاً: دع تفكيرك في البداية منصب على المعنى ولا تفكر بالوزن بل تجاهله لفترة معينة حتى يتضح المعنى لديك</string>
    <string name="writing25">خامساً: حاول أن تلحن ما كتبت بعفوية فلا تقول أرغب بوضع القصيدة على البحر الوافر أو الرجز أو الرمل بل دع القصيدة هي التي تحدد بحرها .</string>
    <string name="writing26">سادساً : حاول أن تضع القافية التي تتناغم مع البحر الذي حددته القصيدة</string>
    <string name="writing27">سابعاً: حاول مراجعتها من أجل أن تتأكد خلوها من الكسور</string>
    <string name="writing28">ثامناً: أن جميع حروف العلة لابد تكون ساكنة والحرف الَّذي لا ينطقو لا يكتب لا يوزن.</string>
    <string name="writing29">تاسعًا: دراسة الأبحر الشعرية باستفاضة حتى يمكنك الكتابة</string>
    <string name="writing30">2- القصة والرواية</string>
    <string name="writing31">بص بقى يا برنس عشان نكون متفقين من الآخر كدا القصة والرواية معتمدين على زتونة واحدة فيها الخلاصة كلها اللي هي إيه بقى اللي هي الحبكة، حبكتها صح تبقى أنت كاتب وعظيم وعراب مصر القادم</string>
    <string name="writing32">مظبطتهاش بقى تجيلي وأنا أعلمك إزاي تظبط الحبكة وتحط شوية الdetails  اللي هينوروا الفكرة بس قبل ما نخش على الحبكة تعالى معايا مشوار كدا على الضيق أفهمك فيه حاجة:</string>
    <string name="writing33">وتعتبر الروايات من أجمل أنواع الأدب النثري وتمثل النوع الأحدث بين أنواع القصة، والأكثر تطوراً وتغييراً في الشكل والمضمون بحكم حداثته وما لهُ صِلة بالرواية أو ما شابه كفن السيرة وفن المقامة وإن كانا يعدان أساساً واحداً من الأسس التي قامت عليها الرواية العربية اليوم ذلك إنَّ ما احتواه هذا الفن من قواعد فنية يرجع إلى عهد قريب حين تعرف العرب هذا النوع الأدبي وأصوله كما ظهر مع بدء القرن الماضي إذ ترجم الكثير من القصص والروايات العالمية من الشرق والغرب</string>
    <string name="writing34">وبالأساس فن الرواية بشكله الحالي هو فن غربي بحت، ورغم اختلاف الثقافة الغربية عن الثقافة الشرقية إلا أن عناصر الرواية ثابتة في كلا الثقافتين، أقول عناصر الرواية وليست قواعدها، فكتابة الرواية لا تخضع لأي قواعد، فللروائي الحق في سرد الأحداث بالطريقة التي تلائم خياله.</string>
    <string name="add_novel_name">Novel Name</string>
    <string name="add_novel_url">Novel URL</string>
    <string name="add_short_story_title">Add Short Story Title</string>
    <string name="add_short_story_body">Add Short Story Body</string>
</resources>