<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".feedback.CreateFeedBack">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15ssp"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:nestedScrollingEnabled="true"
        app:cardCornerRadius="@dimen/_15ssp"
        tools:ignore="UnusedAttribute">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/create_FeedBack_Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="start"
                android:text="@string/send_us_your_feedback"
                android:textColor="@color/colorTxt"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_FeedBack_Title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/_50sdp">

                    <EditText
                        android:id="@+id/edt_Create_FeedBack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15ssp"
                        android:background="#2E2E2E"
                        android:fontFamily="@font/regularaa"
                        android:gravity="start"
                        android:hint="@string/write_your_feedback"
                        android:minHeight="@dimen/_250sdp"
                        android:nestedScrollingEnabled="true"
                        android:padding="@dimen/_10ssp"
                        android:textColor="@color/colorTxt"
                        android:textColorHint="#5E5E5E"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_Create_FeedBack_Post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_25sdp"
                        android:ems="10"
                        android:fontFamily="@font/ubuntu"
                        android:text="@string/send"
                        android:textColor="@color/colorTxt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edt_Create_FeedBack"

                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</FrameLayout>