<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="@dimen/_20sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_10sdp"

        >

        <TextView
            android:id="@+id/title_shortS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:ellipsize="end"
            android:fontFamily="@font/regularaa"
            android:hint="Title"
            android:text="@string/writing19"
            android:maxLines="3"
            android:textColor="#009688"
            android:textColorHint="#009688"
            android:textIsSelectable="true"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/short_stories_user_Profile"
            app:layout_constraintTop_toBottomOf="@id/btn_shortS_Accept"

            />

        <LinearLayout
            android:id="@+id/short_stories_user_Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/rounded_card_quote"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="@id/title_shortS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_shortS"

            >

            <ImageView
                android:id="@+id/shortS_star"
                android:visibility="gone"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/shortS_View_Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/ubuntu"
                android:paddingEnd="@dimen/_5sdp"
                android:text="username"
                android:textColor="@color/colorTxt"
                android:textColorHint="@color/colorTxt"
                android:textSize="@dimen/_10sdp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/shortS_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/regularaa"
            android:hint="Body"
            android:text="@string/example"
            android:maxLines="5"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:lineSpacingExtra="4sp"

            android:textColor="@color/colorTxt"
            android:textColorHint="@color/colorTxt"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="@id/title_shortS"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/title_shortS" />

        <ImageView
            android:id="@+id/btn_shortS_Delete"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:visibility="gone"
            android:src="@drawable/ic_trash_bin"
            app:layout_constraintEnd_toStartOf="@id/btn_shortS_Accept"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/_10sdp"

            />

        <ImageView
            android:id="@+id/btn_shortS_Accept"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:visibility="gone"
            android:src="@drawable/accept_mark"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_shortS_Delete"
            app:layout_constraintTop_toTopOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>